<resources>
    <string name="app_name">TECHO Nicaragua</string>
    <string name="action_settings">Settings</string>
    <string name="title_manual">Manuales de construcción</string>
    <string name="title_settings">Configuración</string>
    <string name="title_techo">TECHO</string>
    <string name="title_press_room">Sala de prensa</string>
    <string name="title_contact">Contacto</string>
    <string name="title_social_networks">Redes sociales</string>
    <string name="manual_ground_1">Te presentamos la vivienda de transición, en este manual encontraras todos los puntos para entregar una vivienda de excelencia.</string>
    <string name="manual_ground_2">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/im_vivienda-1.jpg</string>
    <string name="manual_ground_3">Recuerda no solo importa construir la vivienda, sino también compenetrarse con la familia durante la construcción.</string>
    <string name="manual_ground_4">Por tu seguridad:</string>
    <string name="manual_ground_5">• No trabajar con zapatos abiertos. (Croes, sandalias)\n• Prohibido movilizar zinc sin guantes.\n• No dejar los martillos colgados de la estructura de techo, sino dejarlos seguros en el suelo.\n• Mucho cuidado con los niños cuando estén trabajando con los paneles y hojas de zinc.</string>
    <string name="manual_ground_6">Lo que se necesita:</string>
    <string name="manual_ground_7">Deben de revisar que tengan la cantidad de materiales, herramientas y herraje requeridas para la construcción de la vivienda según la información brindada a continuación:</string>
    <string name="manual_ground_8">Materiales</string>
    <string name="manual_ground_9">Herraje</string>
    <string name="manual_ground_10">Herramientas</string>
    <string name="manual_ground_11">Dimensiones</string>
    <string name="manual_ground_12">Siempre antes de empezar a construir cercioramos que el terreno tenga las dimensiones mínimas para poder construir de 7 x 4 m.</string>
    <string name="manual_ground_13">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/area-1.jpg</string>
    <string name="manual_ground_14">Calcula el desnivel del terreno dentro del área mínima recomendada para construir, de la siguiente manera:\n\n1) Coloca la manguera en un recipiente con agua y succiona hasta que se llene, asegurate de que no queden burbujas.</string>
    <string name="manual_ground_15">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/ground_1-2.jpg</string>
    <string name="manual_ground_16">2) Coloca dos barras en el terreno, una en el punto mas alto y la otra en el mas bajo, coloca la manguera al lado de las barras y espera a que de nivel.</string>
    <string name="manual_ground_17">3) Luego mide la distancia en cada una de las barras entre el suelo y el nivel de manguera. La diferencia de estas sera el desnivel. Recuerda que el desnivel máximo permitido es 30 cm, si excede este desnivel tienes que terracear</string>
    <string name="manual_ground_18">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/ground_2-1.jpg</string>
    <string name="manual_ground_19">¿Como terracear?</string>
    <string name="manual_ground_20">De la parte mas alta del terreno extrae material y depositalo en la parte mas baja. Toma una viga de piso y arrastrala por todo el terreno para quitar el excedente. Riega constante y compacta la tierra al finalizar vuelve a nivelar con manguera.</string>
    <string name="manual_ground_21">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/ground_3-1.jpg</string>
    <string name="manual_ground_22">Recuerda:</string>
    <string name="manual_ground_23">• Preguntar siempre a la familia, ¿si existen tuberías en el terreno? y ¿por dónde pasa?\n• Preguntale a la familia por la orientación de la casa, toma en cuenta la procedencia de los vientos.\n• Verifica que el terreno este limpio para la construcción, sin raíces, piedras, etc.\n• Antes de terminar la construcción limpiar y recoger todas las herramientas.</string>
    <string name="manual_ground_chk_0">1 Panel trasero</string>
    <string name="manual_ground_chk_1">2 Panel gemelo</string>
    <string name="manual_ground_chk_2">1 Panel de puerta</string>
    <string name="manual_ground_chk_3">2 Panel lateral</string>
    <string name="manual_ground_chk_4">3 Panel de piso</string>
    <string name="manual_ground_chk_5">15 Pilotes</string>
    <string name="manual_ground_chk_6">6 Vigas de piso</string>
    <string name="manual_ground_chk_7">8 Vigas secundaria</string>
    <string name="manual_ground_chk_8">10 Clavadores</string>
    <string name="manual_ground_chk_9">4 Ventanas</string>
    <string name="manual_ground_chk_10">1 Puerta</string>
    <string name="manual_ground_chk_11">1 Cumbrera Larga</string>
    <string name="manual_ground_chk_12">1 Cumbrera Corta</string>
    <string name="manual_ground_chk_13">8 Lamina de zinc</string>
    <string name="manual_ground_chk_14">2 Corte de zinc</string>
    <string name="manual_ground_chk_15">80 Clavos de 3</string>
    <string name="manual_ground_chk_16">135 Clavos de 4</string>
    <string name="manual_ground_chk_17">65 Clavos de Zinc</string>
    <string name="manual_ground_chk_18">11 Bisagras</string>
    <string name="manual_ground_chk_19">1 Haladera</string>
    <string name="manual_ground_chk_20">1 Aldabón</string>
    <string name="manual_ground_chk_21">1 Candado</string>
    <string name="manual_ground_chk_22">1 Pasador</string>
    <string name="manual_ground_chk_23">130 Tornillos</string>
    <string name="manual_ground_chk_24">1 Tapa Goteras</string>
    <string name="manual_ground_chk_25">1 Caucho</string>
    <string name="manual_ground_chk_26">1 Nylon</string>
    <string name="manual_ground_chk_27">3 Barra</string>
    <string name="manual_ground_chk_28">3 Serrucho</string>
    <string name="manual_ground_chk_29">3 Martillos</string>
    <string name="manual_ground_chk_30">3 Desatornillador</string>
    <string name="manual_ground_chk_31">1 Nivel de gota</string>
    <string name="manual_ground_chk_32">1 Manguera</string>
    <string name="manual_ground_chk_33">3 Formones</string>
    <string name="manual_ground_chk_34">3 Cintas metricas</string>
    <string name="manual_ground_chk_35">3 Palas</string>
    <string name="manual_pilotes_1">Pilote Maestro</string>
    <string name="manual_pilotes_2">http://i933.photobucket.com/albums/ad179/mcnallydevelopers/techo-android/polites_1.jpg</string>
    <string name="manual_pilotes_3">Recomendaciones para colocar pilotes:</string>
    <string name="manual_pilotes_4">Introduce el pilote maestro, nivela con el nivel de gota y fijalo con capas de tierra compactada y piedras, repite este procedimiento con los demás pilotes.</string>
    <string name="manual_pilotes_5">A) Suelo rocoso</string>
    <string name="manual_pilotes_6">Asegurate de medir y marcar correctamente la ubicación de los pilotes, de esta manera evitas cavar de mas en un suelo tan solido.</string>
    <string name="manual_pilotes_7">B) Suelo lodoso</string>
    <string name="manual_pilotes_8">Asegurate de reforzar los pilotes con bastantes rocas para que no se muevan, ya que este terreno se expande y contrae constantemente.</string>
    <string name="manual_pilotes_9">C) Suelo arenoso</string>
    <string name="manual_pilotes_10">En este caso debes reemplazar la tierra alrededor del pilote con material selecto, coloca muchas piedras para evitar que se mueva el pilote.</string>
    <string name="manual_pilotes_11">D) Durante lluvia</string>
    <string name="manual_pilotes_12">Crea canales entre los hoyos de los pilotes para que el agua no se estanque y genere mucho lodo.</string>
    <string name="manual_pilotes_13">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/polites_2.jpg</string>
    <string name="manual_pilotes_14">Cuando la pendiente es entre 25 y 30 cm se recomienda colocar el pilote maestro entre 10 y 15 cm de salida, es decir entre 70 y 80 cm de profundidad si el pilote mide 90 cm.</string>
    <string name="manual_pilotes_15">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/polites_3.jpg</string>
    <string name="manual_pilotes_16">Cuando la pendiente es entre 10 y 24 cm se recomienda colocar el pilote maestro entre 15 y 25 cm de salida, es decir entre 55 y 70 cm de profundidad si el pilote mide 90 cm.</string>
    <string name="manual_pilotes_17">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/polites_4.jpg</string>
    <string name="manual_pilotes_18">Cuando la pendiente es menor a 10 cm se recomienda colocar el pilote maestro entre 25 y 30 cm de salida, es decir no menos de 50 cm de profundidad si el pilote mide 90 cm.</string>
    <string name="manual_pilotes_19">Recuerda:</string>
    <string name="manual_pilotes_20">• Cuando la pendiente exceda los 60 cm, tu jefe(a) de construcción te brindara los pilotes del tamaño adecuado mayores a 90 cm, en esta situación ocupa las medidas del caso 2.</string>
    <string name="manual_pilotes_21">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/polites_5.jpg</string>
    <string name="manual_pilotes_22">Triangulación</string>
    <string name="manual_pilotes_23">Coloca tres cintas de manera que formen un triangulo rectángulo de 3,00 m x 6,10 m x 6.80 m empezando como referencia el pilote maestro. Cerciorate que estas medidas coincidan con la parte exterior de los pilotes. Antes de empezar a colocar los pilotes ocupa este método para visualizar la posición exacta de la vivienda.</string>
    <string name="manual_pilotes_24">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/polites_6.jpg</string>
    <string name="manual_pilotes_25">Recuerda:</string>
    <string name="manual_pilotes_26">• Siempre estar verificando el nivel de los pilotes con respecto al pilote maestro con el nivel de manguera.\n• El nylon solo sirve de guía.</string>
    <string name="manual_pilotes_im_1">https://raw.github.com/paulomcnally/techo-nicaragua-android/master/images/manual/im_pilotest_1.jpg</string>
    <string name="manual_door_and_windows_1">Elimina el cuartón sobrante en la parte inferior del vano de la puerta Luego presenta la puerta y escoge la que mejor calce.</string>
    <string name="manual_door_and_windows_3">Marca las siguiente medidas en la puerta. Luego realiza un saque con el formón para instalar las bisagras.</string>
    <string name="manual_door_and_windows_5">Después presenta la puerta nuevamente coloca unas cuñas de madera mas o menos de 2 cm. Marca las bisagras en el panel y realiza un saque con el formón. Luego coloca la puerta y fijala atornillando las bisagras.</string>
    <string name="manual_door_and_windows_6">¿Como colocarlas?</string>
    <string name="manual_door_and_windows_7">Ahora solo resta colocar la ventanas y puertas para terminar la vivienda sigue los siguientes pasos:</string>
    <string name="manual_door_and_windows_10">Al finalizar coloca los pasadores en puerta y ventanas y la aldaba en la puerta.</string>
    <string name="manual_door_and_windows_11">Recuerda:</string>
    <string name="manual_door_and_windows_12">• Si la puerta o ventanas no calzan nunca las corte, utiliza el formón y el cepillo para madera. Pide el apoyo de tu jefe(a) de construcción.</string>
    <string name="manual_door_and_windows_13">Debemos instalar 4 ventanas por lo tanto en el primer paso es presentarlas en cada vano para conseguir aquel que calce mejor en cada una.</string>
    <string name="manual_door_and_windows_15">Marca las siguiente medidas en las ventanas Luego realiza un saque con el formón para instalar las bisagras. Después presenta las ventanas nuevamente, Marca las bisagras en el panel y realiza un saque con el formón Fija la ventana con tornillos.</string>
</resources>